--- a/src/main/resources/db/changelog-master.yml
+++ b/src/main/resources/db/changelog-master.yml
@@ -1,3 +1,13 @@
 databaseChangeLog:
   - include:
       file: db/changelog/base.sql
+  - include:
+      file: db/changelog/post_office.yaml
+  - include:
+      file: db/changelog/shipment.yaml
+  - include:
+      file: db/changelog/shipment_type.yaml
+  - include:
+      file: db/changelog/history.yaml
+  - include:
+      file: db/changelog/history_type.yaml
