--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/post_keeper_db
+spring.datasource.url=${POSTGRES_DSN:jdbc:postgresql://localhost:5432/post_keeper_db}
 spring.datasource.username=post_keeper_user
 spring.datasource.password=post_keeper_pass
 
